# Ireland-SAR-Toolkit

./: Dockerfile  README.md  docker-compose.yml  ireland-sar-toolkit-onepager.md  pyproject.toml  requirements.txt  setup.sh
config/: my_details_template.json  schema.json
docs/: foi_vs_sar.md  legal_basis.md  opsec_protocol.md
scripts/: dpc_complaint_drafter.py  export_tracker_md.py  generate_sar.py  hash_responses.py  ics_generator.py  redact.py
templates/: dpc_complaint_template.md  dsp_sar.md  garda_f20.md  generic_sar.md  hse_sar.md  justice_sar.md  revenue_sar.md  tusla_sar.md
tests/: test_dpc_complaint_drafter.py  test_export_tracker_md.py  test_generate_sar.py  test_hash_responses.py  test_ics_generator.py
tracking/: sar_tracker_template.csv
